solved problem with horizontal scroll

--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -5,3 +5,10 @@
     margin: 0 auto;
     box-sizing: border-box;
 }
+
+@media (max-width: 1024px) {
+    .lead__image {
+        --width: 928px;
+        width: min(var(--width), 100%);
+    }
+}
